; ModuleID = '/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-search.c_build_binary_subtraction_iterator.c'
source_filename = "/home/carl/AnghaBench/kphp-kdb/targ/extr_targ-search.c_build_binary_subtraction_iterator.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.binary_operation_iterator = type { i32, i8*, i8*, i32 (i8*, i32)* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i8* @build_binary_subtraction_iterator(i8* %0, i8* %1) #0 {
  %3 = alloca i8*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.binary_operation_iterator*, align 8
  store i8* %0, i8** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = call %struct.binary_operation_iterator* @zmalloc(i32 32)
  store %struct.binary_operation_iterator* %6, %struct.binary_operation_iterator** %5, align 8
  %7 = load %struct.binary_operation_iterator*, %struct.binary_operation_iterator** %5, align 8
  %8 = getelementptr inbounds %struct.binary_operation_iterator, %struct.binary_operation_iterator* %7, i32 0, i32 3
  store i32 (i8*, i32)* @binary_subtraction_iterator_jump_to, i32 (i8*, i32)** %8, align 8
  %9 = load %struct.binary_operation_iterator*, %struct.binary_operation_iterator** %5, align 8
  %10 = getelementptr inbounds %struct.binary_operation_iterator, %struct.binary_operation_iterator* %9, i32 0, i32 0
  store i32 -1, i32* %10, align 8
  %11 = load i8*, i8** %3, align 8
  %12 = load %struct.binary_operation_iterator*, %struct.binary_operation_iterator** %5, align 8
  %13 = getelementptr inbounds %struct.binary_operation_iterator, %struct.binary_operation_iterator* %12, i32 0, i32 2
  store i8* %11, i8** %13, align 8
  %14 = load i8*, i8** %4, align 8
  %15 = load %struct.binary_operation_iterator*, %struct.binary_operation_iterator** %5, align 8
  %16 = getelementptr inbounds %struct.binary_operation_iterator, %struct.binary_operation_iterator* %15, i32 0, i32 1
  store i8* %14, i8** %16, align 8
  %17 = load %struct.binary_operation_iterator*, %struct.binary_operation_iterator** %5, align 8
  %18 = bitcast %struct.binary_operation_iterator* %17 to i8*
  %19 = call i32 @binary_subtraction_iterator_jump_to(i8* %18, i32 0)
  %20 = load %struct.binary_operation_iterator*, %struct.binary_operation_iterator** %5, align 8
  %21 = bitcast %struct.binary_operation_iterator* %20 to i8*
  ret i8* %21
}

declare dso_local %struct.binary_operation_iterator* @zmalloc(i32) #1

declare dso_local i32 @binary_subtraction_iterator_jump_to(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
